feat(game,ui): 予測/解決を仕様準拠へ移行＋地形/内訳表示＋操作追加
- pkg/game: ForecastAt/ResolveRoundAt, Terrain, Breakdown追加。2RN/三すくみ/最小ダメ1。tests追加\n- ui/screens: 予測(命中/与ダメ/必殺)＋相性表示、地形切替(1/2/3, Shift+数字)、反撃可否、内訳表示\n- cmd/ui_sample: ResolveRoundAtへ置換、射程反撃、地形適用、キー操作強化\n- ui/api: DrawBattleWithTerrain公開\n- Makefile: mcp=check-all+lint、ネットワーク制約時フォールバック、testターゲット追加\n- docs/API.md: /pkg/game API追記\n- tasks/battle_mvp_plan.md: 実装状況を追記\n- .gitignore: cache/artifacts/env/ローカルDBを無視対象に追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,32 @@
 # OS / editor
 .DS_Store
+Thumbs.db
 .idea/
 .vscode/
+
+# Local caches
+.cache/
+.gocache/
+.gomodcache/
 
 # Go build
 bin/
 dist/
 build/
 coverage.out
+coverage.*
+*.prof
 
 # Modules / workspace
 go.work
 
 # Env / logs
 .env
+.env.*
 *.log
+
+# Artifacts (検証/保存物など)
+artifacts/
+
+# Local user DB override (任意運用)
+db/user/*_local.json
